# QSynthesis

QSynthesis/: CMakeLists.txt
QSynthesis/Frontend/Tabs/Tuning/: TuningTab_Render.cpp
QSynthesis/Global/QS/: SystemApis.cpp
